--- a/index.html
+++ b/index.html
@@ -1,76 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Анастасия Сверчкова</title>
-  </head>
-  <body>
-    <div class="container">
-      <section class="top mt-5 mb-5">
-        <div class="row top-photo">
-          <div class="col-12">
-            <img src="img/photo.jpg" alt="photo">
-          </div>
-        </div>
-        <div class="row top-text">
-          <div class="col-12">
-            <h1>анастасия сверчкова</h1>
-            <h3>Английский язык для всех</h3>
-          </div>
-        </div>
-      </section>
-      <div class="row">
-        <p>
-          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample"> Link with href </a>
-        </p>
-        <p>
-        <div class="collapse" id="collapseExample1">
-          <div class="card card-body"> Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger. </div>
-        </div>
-        </p>
-        <p>
-          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample"> Link with href </a>
-        </p>
-        <p>
-        <div class="collapse" id="collapseExample2">
-          <div class="card card-body"> Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger. </div>
-        </div>
-        </p>
-        <p>
-          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample"> Link with href </a>
-        </p>
-        <p>
-        <div class="collapse" id="collapseExample3">
-          <div class="card card-body"> Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger. </div>
-        </div>
-        </p>
-      </div>
-      <div class="row about">
-        <div class="col-12">
-          <h3> Индивидуальные занятия </h3>
-          <ul>
-            <li> – Индивидуальная программа под ваш запрос </li>
-            <li>– Уроки, основанные на ваших целях </li>
-            <li>– Работа на интерактивной платформе </li>
-          </ul>
-          <p>На индивидуальных занятиях я разрабатываю учебную программу под ваш запрос. Я опираюсь на тот результат, который вы хотите получить с помощью английского языка. </p>
-          <p> На первой встрече я подробно расспрошу вас о вашей задаче. Мы вместе разложим ее на компоненты и составим дорожную карту: куда мы двигаемся и чему именно вам нужно научиться, чтобы прийти к цели. </p>
-          <p> После этого я напишу для вас учебную программу, по которой мы будем заниматься. Вы будете видеть ее на личной странице. </p>
-          <h3>35 € / 55-60 минут</h3>
-        </div>
-      </div>
-      <div class="row book">
-        <div class="col-12">
-          <div class="book-tgbutton">
-            <a href="https://t.me/sverchkova_an_tr" target="_blank">Написать в Telegram</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+	<head>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<script src="js/bootstrap.bundle.min.js"></script>
+		<link rel="stylesheet" href="style.css">
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Анастасия Сверчкова</title>
+	</head>
+	<body>
+		<div class="container">
+			<section class="top mt-3">
+				<div class="row top-photo">
+					<div class="col-12">
+						<img src="img/photo.jpg" alt="photo">
+					</div>
+				</div>
+				<div class="row top-text">
+					<div class="col-12">
+						<h1 class="text-uppercase mt-3">анастасия сверчкова</h1>
+						<h3>Английский язык для всех</h3>
+					</div>
+				</div>
+			</section>
+			<div class="row accordion-wrapper">
+				<div class="col-12">
+					<div class="accordion" id="accordionExample">
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingOne">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Мой опыт </button>
+							</h2>
+							<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									<p>Меня зовут Анастасия и я являюсь преподавателем английского и французского языков. Имею высшее педагогическое образование и два сертификата переводчика. На протяжении 6 лет успешно работаю как со школьниками, так и со взрослыми. </p>
+									<ul>
+										<li> - ф-т иностранных языков педагогического университета 2021г </li>
+										<li> - Базовый курс письменного переводчика 2021г </li>
+										<li>- Базовый курс художественного перевода 2022г</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingTwo">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Мои задачи </button>
+							</h2>
+							<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									<ul>
+										<li> - помочь школьникам улучшить оценки и восполнить пробелы в знаниях </li>
+										<li>- помочь школьникам сдать ОГЭ/ЕГЭ на высокий балл </li>
+										<li>- помочь школьникам овладеть иностранным языком для успешной карьеры в будущем </li>
+										<li>- помочь взрослым подготовиться к собеседованию/работе в иностранной компании </li>
+										<li>- помочь взрослым обрести уверенность в путешествиях </li>
+										<li>- помочь взрослым эмигрировать </li>
+										<li>- помочь взрослым возродить любовь к иностранному языку </li>
+									</ul>
+									<p>Словом, помогаю Вам достичь своих целей и становлюсь Вашим любимым преподавателем :) </p>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingThree">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Мои инструменты </button>
+							</h2>
+							<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									<p>Занятия проводятся по видеосвязи ZOOM с одновременным использованием других разнообразных платформ.
+									<p> Уроки включают в себя подготовку по всем фронтам: аудирование, чтение, письмо и говорение. </p>
+									<p> На занятиях я использую как материалы из авторитетных источников, так и материалы, созданные мной.</p>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row about">
+				<div class="col-12">
+					<h3> Индивидуальные занятия </h3>
+					<ul>
+						<li> – Индивидуальная программа под ваш запрос </li>
+						<li>– Уроки, основанные на ваших целях </li>
+						<li>– Работа на интерактивной платформе </li>
+					</ul>
+					<p>На индивидуальных занятиях я разрабатываю учебную программу под ваш запрос. Я опираюсь на тот результат, который вы хотите получить с помощью английского языка. </p>
+					<p> На первой встрече я подробно расспрошу вас о вашей задаче. Мы вместе разложим ее на компоненты и составим дорожную карту: куда мы двигаемся и чему именно вам нужно научиться, чтобы прийти к цели. </p>
+					<p> После этого я напишу для вас учебную программу, по которой мы будем заниматься. Вы будете видеть ее на личной странице. </p>
+					<h3>600Р - стандартный урок<br><br>
+                        750Р - подготовка к огэ\егэ и иным экзаменам 
+                    </h3>
+				</div>
+			</div>
+			<div class="row book">
+				<div class="col-12">
+					<div class="book-tgbutton">
+						<a href="https://t.me/sverchkova_an_tr" target="_blank">Написать в Telegram</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<span class="collapse-icon"></span>
+	</body>
 </html>
