--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 					<p>На индивидуальных занятиях я разрабатываю учебную программу под ваш запрос. Я опираюсь на тот результат, который вы хотите получить с помощью английского языка. </p>
 					<p> На первой встрече я подробно расспрошу вас о вашей задаче. Мы вместе разложим ее на компоненты и составим дорожную карту: куда мы двигаемся и чему именно вам нужно научиться, чтобы прийти к цели. </p>
 					<p> После этого я напишу для вас учебную программу, по которой мы будем заниматься. Вы будете видеть ее на личной странице. </p>
-					<h3>600Р - стандартный урок<br><br>
-                        750Р - подготовка к огэ\егэ и иным экзаменам 
-                    </h3>
+					<h3>600Р - стандартный урок <br>
+						<br> 750Р - подготовка к огэ\егэ и иным экзаменам
+					</h3>
 				</div>
 			</div>
-			<div class="row book">
+			<div class="row book mt-5 mb-5">
 				<div class="col-12">
 					<div class="book-tgbutton">
 						<a href="https://t.me/sverchkova_an_tr" target="_blank">Написать в Telegram</a>
@@ -101,6 +101,5 @@
 				</div>
 			</div>
 		</div>
-		<span class="collapse-icon"></span>
 	</body>
 </html>
